# FakeInput

./: CMakeLists.txt
config/cmake/: CMakeMacros.txt
include/FakeInput/: display_unix.hpp  fakeinput.hpp  key.hpp  key_base.hpp  key_unix.hpp  key_win.hpp  keyboard.hpp  mouse.hpp  system.hpp
